--- a/EnjoyEat/EnjoyEat/Views/Home/News.cshtml
+++ b/EnjoyEat/EnjoyEat/Views/Home/News.cshtml
@@ -45,7 +45,8 @@
     <div class="row">
         <div class="col-sm-6 col-lg-3 mb-4" v-for="news in currentPageNews" v-bind:key="news.newsId">
             <div class="card" v-on:click="showModal(news.newsId)">
-                <img v-bind:src="news.imageUrl" class="card-img-top" alt="圖片加載中">
+                <img v-bind:src="'https://enjoyeat.azurewebsites.net/' + news.imageUrl" class="card-img-top" alt="圖片加載中">
+
                 <div class="card-body">
                     <h6 class="card-title text-body">{{ news.category }}</h6>
                     <h5 class="card-text text-body">{{ news.title }}</h5>
